# eventannotationtool

./: CMakeLists.txt  README.md
gui/: maingui.ui
src/: barmanager.cpp  barmanager.h  displaymanager.cpp  displaymanager.h  event.cpp  event.h  eventmanager.cpp  eventmanager.h  grabber.cpp  grabber.h  imagegrabber.cpp  imagegrabber.h  main.cpp  maingui.cpp  maingui.h  qtcvtransform.cpp  qtcvtransform.h  videograbber.cpp  videograbber.h  xmlreader.cpp  xmlreader.h  xmlwriter.cpp  xmlwriter.h
